<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_homebg"
    android:orientation="vertical"
    tools:context="com.ai.covidainuas.fragment.IdnFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingLeft="20dp"
                android:text="Data Covid"
                android:textColor="@color/bgPrimary"
                android:textSize="30dp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/swipeRefreshIdn">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_indikator"
            android:elevation="@dimen/cardElevation"
            app:layout_constraintCircleRadius="@dimen/cardRadius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/bg_indikator"
                android:elevation="@dimen/cardElevation"
                app:layout_constraintCircleRadius="@dimen/cardRadius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_header">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingTop="12dp">

                        <ImageView
                            android:layout_width="@dimen/imgindicator"
                            android:layout_height="@dimen/imgindicator"
                            android:layout_marginBottom="12dp"
                            android:src="@drawable/bg_indikator_1" />

                        <TextView
                            android:id="@+id/tvValuePositifIdn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/zero"
                            android:textColor="@color/redPrimary"
                            android:textSize="@dimen/count_indicator" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/confirmed"
                            android:textColor="@color/fontprimary"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingTop="12dp">

                        <ImageView
                            android:layout_width="@dimen/imgindicator"
                            android:layout_height="@dimen/imgindicator"
                            android:layout_marginBottom="12dp"
                            android:src="@drawable/bg_indikator_2" />

                        <TextView
                            android:id="@+id/tvValueRecoveredIdn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/zero"
                            android:textColor="@color/greendSecondary"
                            android:textSize="@dimen/count_indicator" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recovered"
                            android:textColor="@color/fontprimary"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingTop="12dp">

                        <ImageView
                            android:layout_width="@dimen/imgindicator"
                            android:layout_height="@dimen/imgindicator"
                            android:layout_marginBottom="12dp"
                            android:src="@drawable/bg_indikator_3" />

                        <TextView
                            android:id="@+id/tvValueDeathsIdn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/zero"
                            android:textColor="@color/redoldPrimary"
                            android:textSize="@dimen/count_indicator" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/deaths"
                            android:textColor="@color/fontprimary"
                            android:textSize="20sp" />
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="Data Indonesia"/>
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
        <FrameLayout
            android:id="@+id/cv_detail_idn"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/blueSecondary"
            app:layout_constraintTop_toBottomOf="@+id/swipeRefreshIdn" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Detail data covid Provinsi  >"
                android:textColor="@color/bgSecondary"
                android:textSize="15dp" />
        </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingTop="2dp"
                    android:gravity="left"
                    android:paddingBottom="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:text="Peta Sebaran Covid"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/btnMap"
                        android:layout_marginStart="50dp"
                        android:layout_width="110dp"
                        android:background="#fff"
                        android:padding="2dp"
                        android:drawableLeft="@drawable/ic_map"
                        android:layout_height="wrap_content"
                        android:text="Lihat map"
                        android:textAlignment="textEnd"
                        android:textAllCaps="false" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">


                    <WebView
                        android:id="@+id/webViewMap"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                    </WebView>

                    <ProgressBar
                        android:id="@+id/pbWeb"
                        android:layout_marginTop="100dp"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_x="172dp"
                        android:layout_y="68dp" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

   </RelativeLayout>